# cr-grpc

./: .gitignore  pyproject.toml  route_guide.proto
hello/: client.py  create_pb.sh  hello.proto  hello_pb2.py  hello_pb2_grpc.py  server.py
